--- a/user-onboarding/package.json
+++ b/user-onboarding/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.3.1",
     "axios": "^0.19.0",
     "formik": "^1.5.8",
+    "formik-material-ui": "^0.0.20",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
